--- a/Branch/templates/paginas/Jonathan.html
+++ b/Branch/templates/paginas/Jonathan.html
@@ -83,13 +83,13 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/eHEdPKG-R-4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section class="vid">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/WM1EhsdN09I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/K6QzfR__7X0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/wxzxoKXfu2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
     <footer class ="foot">
         <p>
-            Essa pagina foi criada por Jonathan Nicolas Maciel Costa, Aluno do curdo de ADS para o trabalho de redes,
+            Essa pagina foi criada por Jonathan Nicolas Maciel Costa, Aluno do curso de ADS para o trabalho de redes,
             com o intuito de se ter uma pagina pra botar no ar '^'
         </p>
     </footer>
