--- a/Branch/templates/paginas/moises.html
+++ b/Branch/templates/paginas/moises.html
@@ -1,13 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio  | Front</title>
-    
-    <link rel="stylesheet" href="{% static 'css/portfolio/porfolio_style.css' %}">
+    <title>Portfólio | Front</title>
+
+    <link rel="stylesheet" href="{% static 'css/portfolio/porfolio_stylee.css' %}">
 </head>
 
 <body>
@@ -16,9 +17,9 @@
     </div>
     <div class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Port<span>fólio</span></a></div>
+            <div class="logo"><a href="../">Port<span>fólio</span></a></div>
             <ul class="menu">
-                <li><a href="#home">Inicio</a></li>
+                <li><a href="{% url 'home' %}">Inicio</a></li>
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
                 <li><a href="#skills">Especialidade</a></li>
@@ -33,7 +34,7 @@
     <!--home inicio-->
     <section class="home" id="home" style=" color:#fff;">
         <!--<img src="{% static 'imagens/portfolio/background.png' %}" alt="">-->
-        <div class="max-width">
+        <div class="max-width" ,style="background-color:#111">
             <div class="home-content">
                 <div class="text-1">Olá Dev, me chamo</div>
                 <div class="text-2">Moisés Monteiro</div>
@@ -54,91 +55,93 @@
 
                 <div class="column right">
                     <div class="text">Sou Moisés e sou <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro doloribus minus eum sed ex. Pariatur voluptate fugit officia nobis nemo nihil reiciendis, similique quas ut tempore adipisci debitis corrupti rerum molestiae placeat excepturi blanditiis assumenda quis suscipit! Vel facilis maiores doloremque perferendis inventore tempore molestiae, sit ipsa blanditiis animi nostrum qui, atque architecto voluptatum cum cupiditate aliquid eius voluptatem id!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro doloribus minus eum sed ex. Pariatur voluptate fugit officia nobis nemo nihil reiciendis, similique quas ut tempore adipisci debitis corrupti rerum molestiae placeat excepturi
+                        blanditiis assumenda quis suscipit! Vel facilis maiores doloremque perferendis inventore tempore molestiae, sit ipsa blanditiis animi nostrum qui, atque architecto voluptatum cum cupiditate aliquid eius voluptatem id!</p>
                     <a href="https://github.com/MoisesMonter" target="_blank">Github</a>
                 </div>
             </div>
         </div>
     </section>
 
-     <!--sessão serviços-->
-     <section class="services" id="services" >
-        <div class="max-width" >
+    <!--sessão serviços-->
+    <section class="services" id="services">
+        <div class="max-width">
             <h2 class="title">Serviços</h2>
             <div class="serv-content">
-               <div class="card">
-                   <div class="box">
-                    <ion-icon name="brush-outline"></ion-icon>
-                    <div class="text">Web Design<br>HTML/CSS/JS</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
-                   </div>
-               </div>
-
-               <div class="card">
-                <div class="box">
-                    <ion-icon name="trending-up-outline"></ion-icon>
-                 <div class="text">Automação<br>Python/C++</div>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="brush-outline"></ion-icon>
+                        <div class="text">Web Design<br>HTML/CSS/JS</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <div class="box">
-                    <ion-icon name="code-outline"></ion-icon>
-                 <div class="text">OpenCV & Yolo<br>With Python</div>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="trending-up-outline"></ion-icon>
+                        <div class="text">Automação<br>Python/C++</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                    </div>
                 </div>
-            </div>
+
+                <div class="card">
+                    <div class="box">
+                        <ion-icon name="code-outline"></ion-icon>
+                        <div class="text">OpenCV & Yolo<br>With Python</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-     <!--sessão especialidade-->
-     <section class="skills" id="skills">
+    <!--sessão especialidade-->
+    <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title">Especialidades</h2>
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Minhas habilidades criativas e experiencias</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod assumenda consequatur facere eius distinctio deleniti reiciendis aliquam architecto suscipit, at, dolores dicta sed adipisci laborum, totam dolorum enim maxime aliquid eos. Ullam, et maiores porro voluptatum explicabo deleniti sint rem quam! Delectus iste ut hic, molestias adipisci totam ipsum reiciendis quam voluptatem nisi cumque saepe ea cupiditate. Vel, quae est!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod assumenda consequatur facere eius distinctio deleniti reiciendis aliquam architecto suscipit, at, dolores dicta sed adipisci laborum, totam dolorum enim maxime aliquid
+                        eos. Ullam, et maiores porro voluptatum explicabo deleniti sint rem quam! Delectus iste ut hic, molestias adipisci totam ipsum reiciendis quam voluptatem nisi cumque saepe ea cupiditate. Vel, quae est!</p>
                     <a href="#">Mais informações</a>
                 </div>
                 <div class="column right">
-                   <div class="bars">
-                       <div class="info">
-                           <span>PYTHON</span>
-                           <span>93%</span>
-                       </div>
-                       <div class="line html"></div>
-                   </div>
-                   <div class="bars">
-                    <div class="info">
-                        <span>C/C++</span>
-                        <span>65%</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>PYTHON</span>
+                            <span>93%</span>
+                        </div>
+                        <div class="line html"></div>
                     </div>
-                    <div class="line c_cpp"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>HTML</span>
-                        <span>87%</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>C/C++</span>
+                            <span>65%</span>
+                        </div>
+                        <div class="line c_cpp"></div>
                     </div>
-                    <div class="line html"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>CSS</span>
-                        <span>65%</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>87%</span>
+                        </div>
+                        <div class="line html"></div>
                     </div>
-                    <div class="line css"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>JavaScript</span>
-                        <span>42%</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>65%</span>
+                        </div>
+                        <div class="line css"></div>
                     </div>
-                    <div class="line JS"></div>
-                </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>42%</span>
+                        </div>
+                        <div class="line JS"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -149,58 +152,60 @@
         <div class="max-width">
             <h2 class="title">Contato</h2>
             <div class="contact-content">
-               <div class="column left">
-                   
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit laudantium saepe, voluptate libero fugiat in, dolores voluptatem distinctio animi et iusto, amet possimus tenetur modi cupiditate. Odio, numquam fuga perferendis vitae ullam eum, ipsam tempora unde nisi optio vero recusandae ipsa asperiores rem, labore impedit laudantium officiis maiores natus.</p>
-               
-               <div class="icons">
-                   <div class="row">
-                        <ion-icon name="person-outline"></ion-icon>
-                        <div class="info">
-                            <div class="head">Nome</div>
-                            <div class="sub-title">Moisés Monteiro</div>
+                <div class="column left">
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit laudantium saepe, voluptate libero fugiat in, dolores voluptatem distinctio animi et iusto, amet possimus tenetur modi cupiditate. Odio, numquam fuga perferendis
+                        vitae ullam eum, ipsam tempora unde nisi optio vero recusandae ipsa asperiores rem, labore impedit laudantium officiis maiores natus.</p>
+
+                    <div class="icons">
+                        <div class="row">
+                            <ion-icon name="person-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">Nome</div>
+                                <div class="sub-title">Moisés Monteiro</div>
+                            </div>
                         </div>
-                   </div>
-                   <div class="row">
-                    <ion-icon name="earth-outline"></ion-icon>
-                    <div class="info">
-                        <div class="head">Endereço</div>
-                        <div class="sub-title">Pau dos Ferros, RN</div>
+                        <div class="row">
+                            <ion-icon name="earth-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">Endereço</div>
+                                <div class="sub-title">Pau dos Ferros, RN</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <ion-icon name="person-outline"></ion-icon>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">moises.monteiro@academico.ifrn.edu.br</div>
+                            </div>
+                        </div>
                     </div>
-               </div>
-               <div class="row">
-                <ion-icon name="person-outline"></ion-icon>
-                <div class="info">
-                    <div class="head">Email</div>
-                    <div class="sub-title">moises.monteiro@academico.ifrn.edu.br</div>
                 </div>
-           </div>
-               </div>
-            </div><!--column left-->
-            <div class="column rigth">
-                <div class="text">Mensagem</div>
-                <form action="#">
-                    <div class="fields">
-                        <div class="field name">
-                            <input type="text" placeholder="Nome" required>
+                <!--column left-->
+                <div class="column rigth">
+                    <div class="text">Mensagem</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Nome" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
                         </div>
-                        <div class="field email">
-                            <input type="email" placeholder="Email" required>
-                        </div>
-                    </div>
-                    <div class="field">
                         <div class="field">
-                            <input type="text" placeholder="Sobrenome" required>
+                            <div class="field">
+                                <input type="text" placeholder="Sobrenome" required>
+                            </div>
+                            <div class="field textarea">
+                                <textarea cols="30" rows="10" placeholder="Escrever...." required></textarea>
+                            </div>
+                            <div class="button">
+                                <button type="submit">Enviar</button>
+                            </div>
                         </div>
-                        <div class="field textarea">
-                           <textarea  cols="30" rows="10" placeholder="Escrever...." required></textarea>
-                        </div>
-                        <div class="button">
-                            <button type="submit">Enviar</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
@@ -227,4 +232,5 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
 </body>
+
 </html>
